--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
