--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "formik": "^2.4.6",
@@ -22,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "styled-components": "^6.1.12"
