--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.1",
     "sass": "^1.77.8",
     "styled-components": "^6.1.12"
   },
