--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1",
     "sass": "^1.77.8",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
