date added, history ui fixes

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "formik": "^2.4.6",
