--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@mui/x-charts": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.6",
     "animate.css": "^4.1.1",
-    "binlookup": "^2.0.1",
+    "binlookup": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "formik": "^2.4.6",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -41,9 +41,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.2.0",
     "typescript": "^5"
   }
 }
