--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/x-charts": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.6",
     "animate.css": "^4.1.1",
-    "binlookup": "^1.0.0",
+    "binlookup": "^2.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
@@ -32,6 +32,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1",
     "sass": "^1.77.8",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0"
   },
@@ -39,7 +40,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.14",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
@@ -48,7 +49,7 @@
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.2.0",
     "typescript": "^5"
   }
 }
